# ArcFit

./: CMakeLists.txt  README.md
include/: Models.h  MultipleArcFit.h  SingleArcFit.h  Utils.h
src/: Models.cpp  MultipleArcFit.cpp  SingleArcFit.cpp  Utils.cpp
test/: CMakeLists.txt  test.cpp
